# 433A2

./: CMakeLists.txt
app/: blink.c  blink.h  lightReader.c  lightReader.h  main.c  main.h  network.c  network.h  sampler.c  sampler.h  segDisplay.c  segDisplay.h
hal/: digitDisplay.c  digitDisplay.h  led.c  led.h  potentiometer.c  potentiometer.h  sensor.c  sensor.h
noworky/: noworky.c
